# save-it

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: build.sh
src/: auth.py  main.py  pages.py  report.py  supabase_client.py  ui.py  utils.py
